--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
     <div class = "wrapper">
         <div class = "input">
-            <p class = "input-text">Masukkan suhu derajat celsius (C°) ke kotak dibawah, lalu
+            <p class = "input-text">Masukkan suhu derajat celsius (°C) ke kotak dibawah, lalu
                 klik tombol konversi untuk mendapatkan hasil konversi dalam bentuk Farenheit (°F)
             </p>
-            <label for="celsius" id="label1">Celsius(C°): </label>
+            <label for="celsius" id="label1">Celsius(°C): </label>
             <br>
             <textarea rows="10" cols="50" id="celsius" placeholder="Enter your text here"></textarea>
             <div class="button-container">
@@ -25,11 +25,11 @@
                 <label for="hasil">Cara Kalkulasi: </label>
                 <textarea rows="10" cols="50" id="hasil" placeholder="Enter your text here"></textarea>
             </div>
-            <p id="text-link">Farenheit ke Celsius</p>
+            <p id="text-link" class="click-trigger">Farenheit ke Celsius</p>
         </div> 
-        <div class="Explanation">
-            <p id="explanation"><span id= "ftoc" class="ftoc">Fahrenheit to Celsius</span>
-                <span class="mid">Cara Konversi Dari Celsius (℃) ke Fahrenheit (℉)</span>
+        <div class="Explanation hidden">
+            <p id="explanation">
+                <span class="mid"><h1>Cara Konversi Dari Celsius (℃) ke Fahrenheit (℉)</h1></span>
                 Suhu <b><i>S</i></b> dalam derajat Fahrenheit (℉) sama dengan  suhu <b><i>S</i></b> dalam derajat Celsius (℃) kali 9/5 tambah 32</p>
                 <p><b><i>S</i></b><sub>(℉)</sub> = (<b><i>S</i></b><sub>(℃)</sub> × 9/5) + 32</p>
                 <p>atau</p>
